     with VendorID=`0x06da` (Phoenixtec), seen in some models supported by
     MGE HID or Liebert HID, updated to suggest trying `nutdrv_qx`. [#334]
   * MGE HID list of `mge_model_names[]` was extended for Eaton 9E, 5PX and 5SC
     series (largely guessing, feedback and PRs for adaptation to actual
     string values reported by devices via USB are welcome), so these devices
     would now report `battery.voltage` and `battery.voltage.nominal`. [#2380]
   * Added `ups.beeper.status` support for Masterpower MF-UPS650VA using the
     MGE HID subdriver. [#2662]
   * Added support for `0x09D6:0x0001` devices using the MGE HID subdriver
     assuming devices made by KSTAR (alternately using MGE vendor ID). [#2661]
   * `powercom-hid` subdriver sent UPS shutdown commands in wrong byte order,
     at least for devices currently in the field. A toggle was added to set
     the old behavior (if some devices do need it), while a fix is applied
     by default: `powercom_sdcmd_byte_order_fallback`. [PR #2480]
   * `cps-hid` subdriver now supports more variables, as available on e.g.
     CP1350EPFCLCD model, including temperature. [PRs #2540, #2711]
   * loudly suggest to set `pollonly` flag and default a shorter `pollfreq`
     for CPS devices, to try avoiding device-driven timeouts. [#1689]
     Also adjust default `offdelay` and `ondelay` to reasonable values,
     and warn the users with CPS devices if their configured values are
     not multiples of 60. [#432, #1394]
   * in `cps-hid` subdriver, `cps_fix_report_desc()` method should now handle
     mismatched `LogMax` ranges for input and output voltages, whose USB Report
     Descriptors are wrongly encoded by some firmware versions. [#1512]
   * in `cps-hid` subdriver, try to fix frequency scaling based on the values
     we see from the device and/or configuration overrides (low, nominal, high)
     so `499.0 Hz` reading that comes from some firmware versions gets reported
     properly as `49.9Hz`. [#2717]